polycapincludedir = ${includedir}/polycap

NULL=

polycapinclude_HEADERS = \
	polycap.h \
	polycap-error.h \
	polycap-profile.h \
	polycap-description.h \
	polycap-source.h \
	polycap-rng.h \
	polycap-transmission-efficiencies.h \
	polycap-photon.h \
	polycap-progress-monitor.h \
	$(NULL)

EXTRA_DIST = meson.build
