libpolycap_headers = files(
  'polycap.h',
  'polycap-error.h',
  'polycap-profile.h',
  'polycap-description.h',
  'polycap-source.h',
  'polycap-rng.h',
  'polycap-transmission-efficiencies.h',
  'polycap-photon.h',
  'polycap-progress-monitor.h',
)

install_headers(libpolycap_headers, subdir: 'polycap')

